--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,7 +1,7 @@
 spring.application.name=smlist
 
 # H2 Connection
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:test2
 spring.datasource.username=sa
 spring.datasource.password=
 
